--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
     <div class="container-fluid">
 
       <div class="row px-3">
-        <h1 class="display-6 text-uppercase w-100">Experience</h1>
-
-        <div class="card-group">
+        <div class="col">
 
           <div class="card">
             <div class="card-header font-weight-bold text-center">
@@ -33,28 +31,31 @@
             </div>
             <div class="card-body">
               <div class="card-text">
-                <div class="skills-cloud clearfix mx-auto">
-                  <img src="images/skills.png" class="w-100"></img>                </div>
+                <div class="skills-cloud clearfix mx-auto text-center">
+                  <img src="images/skills.png" style="width: 100%"></img>
+                </div>
               </div>
             </div>
           </div>
-
+        </div>
+        <div class="col-8">
           <div class="card">
             <div class="card-header font-weight-bold text-center">
               <h4>Clients/Employers<h4>
             </div>
             <div class="card-body">
               <div class="card-text text-center">
-                <img src="images/att.png" height=70px class="pr-2"/>
-                <img src="images/mcnet.png" height=70px  class="pr-2"/>
-                <img src="images/amgen.png" height=70px class="pr-2"/>
-                <img src="images/boeing.png" height=70px class="pr-2"/>
-                <img src="images/amazon.png" height=70px class="pr-2"/>
-                <img src="images/barclays.png" height=70px class="pr-2"/>
-                <img src="images/metaphor.png" height=70px class="pr-2"/>
-                <img src="images/siq.png" height=70px class="pr-2"/>
-                <img src="images/mci.png" height=70px class="pr-2"/>
-                <img src="images/aramark.png" height=70px class="pr-2"/>
+                <img src="images/att.png" height=80px class="pr-5"/>
+                <img src="images/apfm.svg" height=80px class="pr-5"/>
+                <img src="images/amazon.png" height=80px class="pr-5"/>
+                <img src="images/amgen.png" height=80px class="pr-5"/>
+                <img src="images/boeing.png" height=80px class="pr-5"/>
+                <img src="images/barclays.png" height=80px class="pr-5"/>
+                <img src="images/mcnet.png" height=80px  class="pr-5"/>
+                <img src="images/metaphor.png" height=80px class="pr-5"/>
+                <img src="images/siq.png" height=80px class="pr-5"/>
+                <img src="images/aramark.png" height=80px class="pr-5"/>
+                <img src="images/mci.png" height=80px class="pr-5"/>
               </div>
             </div>
           </div>
@@ -64,8 +65,6 @@
       </div>
       
       <div class="row px-3 mt-5">
-        <h1 class="display-6 text-uppercase text-underline w-100">Portfolio</h1>
-
         <div class="card w-100 mb-3">
           <div class="card-header font-weight-bold">
             <h4>Playz Rails Music Player</h4>
